--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "firebase-admin": "^11.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
