--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "firebase": "^11.7.1",
     "firebase-admin": "^11.9.0"
   },
   "devDependencies": {
